set the api tmdb location in reverse proxy

--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -10,6 +10,11 @@ server {
         proxy_set_header Connection "upgrade";
     }
 
+    location /api/tmdb {
+        rewrite /api/tmdb/(.*) /$1  break;
+	    proxy_pass http://tmdb;
+    }
+
     location / {
 	    proxy_pass http://frontend;
         proxy_buffer_size          128k;
