--- a/backend-services/tmdb/Dockerfile
+++ b/backend-services/tmdb/Dockerfile
@@ -1,7 +1,14 @@
-FROM golang:1.22.1-alpine
+FROM golang:1.22.1-alpine AS builder
+
+RUN set -ex && apk add --no-progress --no-cache \
+      gcc \
+      musl-dev
 
 ADD . /go/src
-WORKDIR /go/src
+WORKDIR /go/src/tmdb
+
+RUN  go mod download
+COPY . .
 
 RUN go get -d -v ./...
-RUN go install -v ./...
+RUN GOOS=linux GOARCH=amd64 go build -a -v -tags musl
